src/css/form.css
.art-textfield {
    position: relative;
    width: 100%;
    margin-top: 30px;

    & label {
        position: absolute;
        left: 0px;
        top: 10px;
        transform: translate(0,10px);
        transition: all .15s cubic-bezier(0.215, 0.610, 0.355, 1.000);
        z-index: 0;
        color: var(--grayColor);
    }

    & input {
        font-family: var(--fontFamily);
        font-size: 16px;
        color: var(--darkColor);
        background: transparent;
        border: none;
        border-bottom: 1px solid var(--grayColor);
        margin: 20px 0 0;
        padding: 0 0 15px 0;
        box-sizing: border-box;
        width: 100%;
        outline: none;
        z-index: 10;
        position: relative;
        transition: all .15s cubic-bezier(0.215, 0.610, 0.355, 1.000);

        &:-webkit-autofill,
        &:-webkit-autofill:hover,
        &:-webkit-autofill:focus {
            background: none;
        }

        &:focus {
            border-bottom: 1px solid var(--darkColor);
        }
        &:focus + label,
        &.filled + label {
            transform: translate(0px,-18px);
            font-size: 12px;
        }
    }

    & button {
        font-family: var(--fontFamilyMedium);
        display: block;
        font-size: 11px;
        font-weight: 100;
        letter-spacing: 1px;
        color: #fff;
        background: var(--darkColor);
        border: none;
        padding: 10px 20px;
        width: 150px;
        height: 40px;
        text-align: left;
        text-transform: uppercase;
        background-image: url('../../assets/images/arrow.svg');
        background-repeat: no-repeat;
        background-position: 130px 50%;
    }

    &.error {

        & input {
            border-color: red;
        }

        & label {
            color: red;
        }
    }

}

